# core-user-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  create_test_users.py  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci-dev-to-main.yml  dev-to-main.yml  merge-to-dev.yml
.tests/unit/: test_lint.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  50887d5d9e5f_convert_uuid_to_integer_ids.py  98474272c984_update_models_to_use_modern_sqlalchemy_.py  cb2e89bc072b_create_users_and_profiles_tables.py
app/: main.py
app/api/v1/: auth.py  users.py
app/core/: database.py  dependencies.py  keys.py  security.py  settings.py
app/data/: users.json
app/models/: __init__.py  base.py  user.py
app/schemas/: auth.py  user.py
app/services/: database_user_service.py  user_service.py
charts/: values.yaml
charts/templates/: deployment.yaml
core_user_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh
scripts/: seed.py
tests/: test_api.py  test_auth.py
