[project]
name = "core-user-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.30.*",
  "pydantic==2.*",
  "pydantic-settings==2.*",
  "python-json-logger==2.*",
  "prometheus-client==0.*",
  "passlib[bcrypt]==1.7.*",
  "pyjwt==2.*"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = [".tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
