[project]
name = "core-user-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.30.*",
  "pydantic==2.*",
  "pydantic-settings==2.*",
  "python-json-logger==2.*",
  "prometheus-client==0.*",
  "passlib[bcrypt]==1.7.*",
  "pyjwt==2.*"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where   = ["."]
include = ["app*"]
exclude = ["helm*", "charts*", "tests*", ".tests*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.main]
load-plugins = [
  "pylint.extensions.mccabe",
  "pylint.extensions.docparams"
]
ignore = ["venv", ".venv", "__pycache__", "tests"]
max-line-length = 100
disable = [
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = [".tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
